--- a/_config.yml
+++ b/_config.yml
@@ -41,9 +41,9 @@ plugins:
 # 3. Gem settings
 paginate: 2 # jekyll-paginate > items per page
 paginate_path: blog/page:num # jekyll-paginate > blog page
-author: Sérgio Lourenço Polo Filho # jekyll-seo-tag > default author
+author: Sérgio Polo # jekyll-seo-tag > default author
 social: # jekyll-seo-tag > social overrides
-  name: Sérgio Lourenço Polo Filho # jekyll-seo-tag > real name
+  name: Sérgio Polo # jekyll-seo-tag > real name
   links:  # jekyll-seo-tag > social aliases (sameAs)
     - https://www.linkedin.com/in/sergio-lp
     - https://github.com/sergio-lp
@@ -92,14 +92,14 @@ defaults:
 # 7. Site settings
 encoding: utf-8 # Make sure the encoding is right
 lang: pt-BR # Set the site language
-title: "Sérgio Lourenço Polo Filho" # Site name or title, also used in jekyll-seo-tag
+title: "Sérgio Polo" # Site name or title, also used in jekyll-seo-tag
 # logo: "/assets/logos/logo.svg" # Site logo, also used in jekyll-seo-tag
-description: "Sérgio Lourenço Polo Filho: graduando em Medicina (FCM - Unicamp), entusiasta em desenvolvimento Android (Kotlin, Java) e apaixonado por tecnologia." # Site description and default description, also used in jekyll-seo-tag
+description: "" # Site description and default description, also used in jekyll-seo-tag
 url: "sergio-lp.github.io" # Site url, also used in jekyll-seo-tag
-baseurl: "sergio-lp.github.io"
+baseurl: ""
 email: "sergio_lpf@outlook.com"
 # disqus: "alembic-1" # Blog post comments, uncomment the option and set the site ID from your Disqus account
-# google_analytics: 'G-0JQHQ16G1L'
+# google_analytics: ''
 # google_analytics_anonymize_ip: ''
 # service_worker: false # Will turn off the service worker if set to false
 css_inline: true # Will insert all styles into a single <style> block in the <head> element and remove the style <link> reference
