--- a/_config.yml
+++ b/_config.yml
@@ -94,12 +94,12 @@ encoding: utf-8 # Make sure the encoding is right
 lang: pt-BR # Set the site language
 title: "Sérgio Polo" # Site name or title, also used in jekyll-seo-tag
 # logo: "/assets/logos/logo.svg" # Site logo, also used in jekyll-seo-tag
-description: "" # Site description and default description, also used in jekyll-seo-tag
+description: "Graduando em Medicina (FCM - Unicamp), entusiasta em desenvolvimento Android e apaixonado por tecnologia." # Site description and default description, also used in jekyll-seo-tag
 url: "sergio-lp.github.io" # Site url, also used in jekyll-seo-tag
 baseurl: ""
 email: "sergio_lpf@outlook.com"
 # disqus: "alembic-1" # Blog post comments, uncomment the option and set the site ID from your Disqus account
-# google_analytics: ''
+google_analytics: 'G-0JQHQ16G1L'
 # google_analytics_anonymize_ip: ''
 # service_worker: false # Will turn off the service worker if set to false
 css_inline: true # Will insert all styles into a single <style> block in the <head> element and remove the style <link> reference
