--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ defaults:
 encoding: utf-8 # Make sure the encoding is right
 lang: pt-BR # Set the site language
 title: "Sérgio Polo" # Site name or title, also used in jekyll-seo-tag
-logo: "favicon.ico" # Site logo, also used in jekyll-seo-tag
+logo: "/assets/favicon.ico" # Site logo, also used in jekyll-seo-tag
 description: "Sérgio Lourenço Polo Filho | Graduando em Medicina (FCM - Unicamp), entusiasta em desenvolvimento Android e apaixonado por tecnologia." # Site description and default description, also used in jekyll-seo-tag
 url: "https://sergio-lp.github.io" # Site url, also used in jekyll-seo-tag
 baseurl: ""
