--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -1,7 +1,7 @@
 - id: ID
   name: NAME
   date: 01/01/1900
-  type: PDF
+  format: PDF
   nature: Requerimento
   link: https://google.com
   signed_by: AUTHOR
