--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -3,5 +3,5 @@
   date: 01/01/1900
   format: PDF
   nature: Requerimento
-  link: https://google.com
+  url: https://google.com
   signed_by: AUTHOR
