--- a/_config.yml
+++ b/_config.yml
@@ -125,7 +125,7 @@ navigation_header:
   url: /contact/
 - title: Github
   url: https://github.com/sergio-lp
-- title: Assinatura digital
+- title: Assinatura eletrônica
   url: /signature/
 
 navigation_footer:
