--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -9,6 +9,7 @@
 
 - id: MAIL_091321_643
   name: MD643 - Alterações de ementa - formas de avaliação - LOGIN INSTITUCIONAL (UNICAMP) NECESSÁRIO
+  date: 13/09/2021
   format: PDF
   nature: Mensagem de e-mail
   url: https://drive.google.com/file/d/1V2sEefmNl9NrY4xk0F7KEAlmXTDtZlb3/view?usp=sharing
