--- a/_config.yml
+++ b/_config.yml
@@ -60,14 +60,6 @@ excerpt_separator: <!-- more --> # Marks end of excerpt in posts
 timezone: Europe/London # Timezone for blog posts and alike
 
 # 5. Collections
-#collections:
-#  posts:
-#    title: Posts # Needed for Siteleaf
-#    output: true
-#    description: "My thoughts and ideas" # The post list page content
-#    feature_text: |
-#      Welcome to the blog
-#    feature_image: "https://picsum.photos/2560/600?image=866"
 
 # 6. Jekyll collections settings
 defaults:
@@ -99,7 +91,7 @@ url: "https://sergio-lp.github.io" # Site url, also used in jekyll-seo-tag
 baseurl: ""
 email: "sergio_lpf@outlook.com"
 google_analytics: "G-0JQHQ16G1L"
-# disqus: "alembic-1" # Blog post comments, uncomment the option and set the site ID from your Disqus account
+# disqus:
 # google_analytics_anonymize_ip: ''
 # service_worker: false # Will turn off the service worker if set to false
 css_inline: true # Will insert all styles into a single <style> block in the <head> element and remove the style <link> reference
@@ -134,3 +126,4 @@ navigation_footer:
 
 # Remote Theme
 remote_theme: daviddarnes/alembic@main
+#theme: alembic-jekyll-theme
