Better file structure organization

--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ defaults:
     scope:
       path: ""
     values:
-      image: "/assets/default-social-image.png" # Default image for sharing
+      image: "/assets/img/bg.jpg" # Default image for sharing
   -
     scope:
       path: ""
