Added more publications

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -17,11 +17,15 @@
       authors: Lília Freire Rodrigues de Souza Li, Ricardo Rodrigues Nunes, Letícia Mansano de Souza, <b>Sérgio Lourenço Polo Filho</b>, Thaís Tawil
       location: Instituto Nacional da Propriedade Industrial (BR512021001141-4)
       pdf: /pdf/certificado_inpi_adolescentes.pdf
+    - title: Desenvolvimento de duas intervenções digitais (aplicativo e <em>website</em>) para fortalecimento do autocuidado e resiliência em pacientes adolescentes com doenças crônicas
+      authors: Letícia Mansano, Paula Maria, <b>Sérgio Polo</b>, Thaís Tawil, Ricardo Nunes, Lilia Li
+      location: VIII Encontro sobre Neurociências na Educação Inclusiva: Lições da Pandemia para a Educação (NEUROEDU'21)
+      award: pdf/neuroedu_award.png
+    - title: Desenvolvimento de duas intervenções digitais (aplicativo e <em>website</em>) para fortalecimento do autocuidado e resiliência em pacientes adolescentes com doenças crônicas
+      authors: Letícia Mansano, Thaís Tawil, <b>Sérgio Polo</b>, Ricardo Nunes, Lilia Li
+      location: Congresso Médico Acadêmico da Unicamp (CoMAU'21)
     - title: Desenvolvimento de intervenções digitais para promoção de saúde e autocuidado a pacientes adolescentes com doenças crônicas
       authors: <b>Sérgio Polo</b>, Letícia Mansano de Souza, Thaís Tawil, Ricardo Rodrigues Nunes, Lília Li
       location: Congresso de Medicina da Universidade Estadual de Londrina (COMUEL'21)
       pdf: /pdf/adolescentes_comuel.pdf
       slides: /pdf/adolescentes_comuel_slides.pdf
-    - title: Desenvolvimento de duas intervenções digitais (aplicativo e <em>website</em>) para fortalecimento do autocuidado e resiliência em pacientes adolescentes com doenças crônicas
-      authors: Letícia Mansano, Thaís Tawil, <b>Sérgio Polo</b>, Ricardo Nunes, Lilia Li
-      location: Congresso Médico Acadêmico da Unicamp (CoMAU'21)
