Added more publications

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -21,6 +21,7 @@
       authors: Letícia Mansano, Paula Maria, <b>Sérgio Polo</b>, Thaís Tawil, Ricardo Nunes, Lilia Li
       location: "VIII Encontro sobre Neurociências na Educação Inclusiva: Lições da Pandemia para a Educação (NEUROEDU'21)"
       award: /pdf/neuroedu_award.png
+      pdf: /pdf/adolescentes_comau_slides.pdf
     - title: Desenvolvimento de duas intervenções digitais (aplicativo e <em>website</em>) para fortalecimento do autocuidado e resiliência em pacientes adolescentes com doenças crônicas
       authors: Letícia Mansano, Thaís Tawil, <b>Sérgio Polo</b>, Ricardo Nunes, Lilia Li
       location: Congresso Médico Acadêmico da Unicamp (CoMAU'21)
