--- a/_config.yml
+++ b/_config.yml
@@ -119,6 +119,8 @@ navigation_header:
   url: https://github.com/sergio-lp
 - title: Assinatura eletrônica
   url: /signature/
+- title: Sistema UBS
+  url: /consulta-ubs//
 
 navigation_footer:
 - title: Made with jekyll and Alembic
