--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -29,5 +29,6 @@
     - title: Desenvolvimento de intervenções digitais para promoção de saúde e autocuidado a pacientes adolescentes com doenças crônicas
       authors: <b>Sérgio Polo</b>, Letícia Mansano de Souza, Thaís Tawil, Ricardo Rodrigues Nunes, Lília Li
       location: Congresso de Medicina da Universidade Estadual de Londrina (COMUEL'21)
+      details: /pdf/certificado_uel.pdf
       pdf: /pdf/adolescentes_comuel.pdf
       slides: /pdf/adolescentes_comuel_slides.pdf
